<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture_app_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:src="@drawable/via_gumtree" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/repeat_background"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_large"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView02"
                    style="@style/table_cell_col1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name" />

                <EditText
                    android:id="@+id/your_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input"
                    android:imeOptions="actionDone"
                    android:maxLength="256"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_large"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView2"
                    style="@style/table_cell_col1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_email" />

                <EditText
                    android:id="@+id/your_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input"
                    android:imeOptions="actionDone"
                    android:maxLength="256"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_large"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView01"
                    style="@style/table_cell_col1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/message" />

                <EditText
                    android:id="@+id/message_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_area"
                    android:maxLines="3"
                    android:scrollHorizontally="true"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <Button
                    android:id="@+id/clear_form_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/btn_clear_form" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_submit" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>